# claude-scientific-writer

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ANALYSIS.md  LICENSE  MIGRATION_GUIDE.md  PDF_FORMATTING_REVIEW.md  README.md  RELEASE_NOTES_2.8.0.md  SKILLS.md  SKILL_REMOVAL_PLAN.md  UPDATE_SUMMARY.md  UV_MIGRATION.md  claude.md  example_api_usage.py  pyproject.toml  requirements.txt  scientific_writer.py  setup.sh
.claude/: WRITER.md  settings.local.json
.claude-plugin/: marketplace.json
.claude/skills/clinical-decision-support/: SKILL.md
.claude/skills/market-research-reports/: SKILL.md
.claude/skills/markitdown/: INSTALLATION_GUIDE.md  OPENROUTER_INTEGRATION.md  QUICK_REFERENCE.md  README.md  SKILL.md  SKILL_SUMMARY.md
.claude/skills/parallel-web/: SKILL.md
.claude/skills/research-lookup/: SKILL.md  WORKFLOW_GUIDE.md  examples.py  research_lookup.py
.claude/skills/scientific-schematics/: README.md  SKILL.md
.claude/skills/venue-templates/: SKILL.md
Docs/: API.md  SKILLS.md  TROUBLESHOOTING.md
commands/: scientific-writer-init.md
docs/: API.md  DEVELOPMENT.md  FEATURES.md  README.md  SKILLS.md
docs/brand/: DOCUMENT_TEMPLATING_SYSTEM.md  ROADMAP.md
docs/original/: DEVELOPMENT.md  DOCUMENTATION_INDEX.md  README.md  SKILLS.md
docs/template-project/: scientific-visualization-SKILL.md
docs/template-project/brand/: BRAND_COLORS_v4.md  visual-design-SKILL.md
examples/: basic_report.py  pareto_reports.py
references/: Oligon_Template.pot  pdf_python_guide.md
scientific_writer/: README.md  __init__.py  api.py  cli.py  core.py  models.py
scientific_writer/.claude/: WRITER.md
skills/citation-management/: SKILL.md
skills/clinical-decision-support/: SKILL.md
skills/clinical-reports/: SKILL.md
skills/hypothesis-generation/: SKILL.md
skills/infographics/: SKILL.md
skills/latex-posters/: SKILL.md
skills/literature-review/: SKILL.md
skills/market-research-reports/: SKILL.md
skills/markitdown/: OPENROUTER_INTEGRATION.md  QUICK_REFERENCE.md  SKILL.md
skills/markitdown/references/: api_reference.md
skills/paper-2-web/: SKILL.md
skills/parallel-web/: SKILL.md
skills/peer-review/: SKILL.md
skills/plotting-libraries/: SKILL.md
skills/pptx-posters/: SKILL.md
skills/research-grants/: SKILL.md
skills/research-lookup/: README.md  SKILL.md  research_lookup.py
skills/scientific-critical-thinking/: SKILL.md
skills/scientific-schematics/: IMPLEMENTATION_PLAN_GEMINI_MODELS.md  SKILL.md
skills/scientific-slides/: SKILL.md
skills/scientific-visualization/: SKILL.md
skills/scientific-writing/: IMPLEMENTATION_PLAN.md  SKILL.md
skills/treatment-plans/: SKILL.md
skills/venue-templates/: REVIEW_AND_IMPROVEMENTS.md  SKILL.md
skills/visual-design/: SKILL.md
src/oligon_reports/: __init__.py  brand_colors.py  components.py  report_generator.py
templates/: CLAUDE.scientific-writer.md
(+38 files in other folders)
