[project]
name = "scientific-writer"
version = "2.8.11"
description = "Deep research and writing tool - combines AI-driven deep research with well-formatted written outputs. Generates publication-ready scientific documents with verified citations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pdf2image>=1.16.0",
]

# System Dependencies (must be installed separately):
# 
# LaTeX Distribution (required for PDF compilation):
#   - macOS: MacTeX (https://www.tug.org/mactex/) or BasicTeX
#     Install: brew install --cask mactex-no-gui
#   - Linux: TeX Live
#     Install: sudo apt-get install texlive-full (Ubuntu/Debian)
#              sudo dnf install texlive-scheme-full (Fedora)
#   - Windows: MiKTeX (https://miktex.org/) or TeX Live
#
# Required LaTeX packages (usually included in full distributions):
#   - pdflatex, bibtex, latexmk
#   - Common packages: amsmath, graphicx, hyperref, natbib, geometry
#
# PDF to Image Conversion (required for pdf2image):
#   - macOS: brew install poppler
#   - Linux: sudo apt-get install poppler-utils (Ubuntu/Debian)
#            sudo dnf install poppler-utils (Fedora)
#   - Windows: Download from https://github.com/osber/poppler-windows
#
# Optional but recommended:
#   - Ghostscript (for PDF manipulation)
#   - ImageMagick (for image processing)

[project.scripts]
scientific-writer = "scientific_writer.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scientific_writer"]

[tool.uv]
dev-dependencies = []

